<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="start_button">Go!</string>
    <string name="try_again">Try Again!</string>
    <string name="default_time">30s</string>
    <string name="time_zero">0s</string>
    <string name="s">s</string>
    <string name="default_points">0/0</string>
    <string name="example_equation">34 + 32</string>
    <string name="example_number">42</string>
    <string name="play_again">Play again</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="waiting_answer">Waiting for answer</string>
</resources>
