<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.matej.braintrainer.MainActivity">

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/playground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/waiting_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gridLayout"
            android:layout_marginTop="20sp"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:id="@+id/result" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:text="@string/default_time"
            android:background="@android:color/holo_green_light"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:padding="10sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/equation"
            android:text="@string/example_equation"
            android:textSize="30sp"
            android:padding="10sp"
            android:layout_toRightOf="@+id/time"
            android:layout_toLeftOf="@+id/points"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/points"
            android:text="@string/default_points"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:padding="10sp"
            />

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_marginTop="20sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/gridLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_number"
                android:textSize="70sp"
                android:padding="10sp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_dark"
                app:layout_column="0"
                app:layout_row="0"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:id="@+id/button0"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_number"
                android:textSize="70sp"
                android:padding="10sp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_orange_dark"
                app:layout_column="1"
                app:layout_row="0"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:id="@+id/button1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_number"
                android:textSize="70sp"
                android:padding="10sp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_purple"
                app:layout_column="0"
                app:layout_row="1"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:id="@+id/button2"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_number"
                android:textSize="70sp"
                android:padding="10sp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"
                app:layout_column="1"
                app:layout_row="1"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:id="@+id/button3"/>


        </android.support.v7.widget.GridLayout>
    </RelativeLayout>

    <Button
        android:text="@string/start_button"
        android:onClick="startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/startButton"
        android:visibility="visible"
        android:padding="20sp"
        android:textSize="50sp" />

</RelativeLayout>
